Fix scroll issue on mobile

--- a/style.css
+++ b/style.css
@@ -29,9 +29,10 @@ p{
     color: rgb(100,116,139);
 }
 
-#container{
+body{
     display: flex; 
-    height: 100vh; 
+    height: 100svh; 
+    overflow: hidden;
     flex-direction: column; 
     background-color: rgb(39,39,42);
 }
